Fix layout issue with login/signup

--- a/client/stylesheets/base/_forms.scss
+++ b/client/stylesheets/base/_forms.scss
@@ -8,3 +8,7 @@
   padding: 0 $space;
   border: 1px solid #e8e8e8;
 }
+
+.form__button {
+  margin: $space 0;
+}
