--- a/client/stylesheets/components/_boxed-view.scss
+++ b/client/stylesheets/components/_boxed-view.scss
@@ -1,17 +1,17 @@
 .boxed-view {
   align-items: flex-start;
-  background: $boxed-view-overlay-bg;
+  // background: $boxed-view-overlay-bg;
   display: flex;
-  height: 100vh;
+  // height: 100vh;
   justify-content: center;
-  width: 100vw;
+  // width: 100vw;
 }
 
 .boxed-view__box {
   background-color: $boxed-view-bg;
   padding: 2.4rem;
   text-align: center;
-  width: 24rem;
+  width: 30rem;
 }
 
 .boxed-view__form {
