--- a/client/stylesheets/components/_page-content.scss
+++ b/client/stylesheets/components/_page-content.scss
@@ -1,5 +1,5 @@
 .page-content {
   max-width: $site-max-width;
   margin: 0 auto;
-  padding: $space;
+  padding: $space 0;
 }
